--- a/appestacaohack/app.json
+++ b/appestacaohack/app.json
@@ -1,14 +1,14 @@
 {
   "expo": {
-    "name": "appestacaohack",
-    "slug": "snack-555ed7ae-024d-4ef4-bd24-b7e1dee3120e",
+    "name": "App Estação Hack",
+    "slug": "app-estacao-hack",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#25367c"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -20,9 +20,10 @@
       "supportsTablet": true
     },
     "android": {
+      "package":"com.colocar.umdominio",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
+        "backgroundColor": "#25367c"
       }
     },
     "web": {
