--- a/appestacaohack/package.json
+++ b/appestacaohack/package.json
@@ -23,7 +23,8 @@
     "@react-native-picker/picker": "2.1.0",
     "@react-navigation/native-stack": "*",
     "react-native-safe-area-context": "3.3.2",
-    "@react-native-async-storage/async-storage": "~1.15.0"
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "expo-dev-client": "~0.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
